typesafe-builders/tests/ui/reject/field_attr/unknown.stderr
error: Unknown field attribute: "yikes"
 --> tests/ui/reject/field_attr/unknown.rs:5:12
  |
5 |     #[builder(yikes)]
  |               ^^^^^
